<resources>
    <string name="app_name">Car Connect</string>

    <string name="alcool">Álcool</string>
    <string name="combustivel">Combustivel</string>
    <string name="diesel">Diesel</string>
    <string name="eletrico">Elétrico</string>
    <string name="flex">Flex</string>
    <string name="gasolina">Gasolina</string>

    <string name="conversivel">Conversível</string>
    <string name="crossover">Crossover</string>
    <string name="cupe">Coupe</string>
    <string name="cupe_super_esportivo">Coupe Super Esportivo</string>
    <string name="hatch">Hatchback</string>
    <string name="luxo">Luxo</string>
    <string name="minivan">Minivan</string>
    <string name="picape">Picape (Truck)</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="wagon">Wagon</string>

    <string name="ar_condicionado">Ar Condicionado</string>
    <string name="ano_do_carro">Ano de fabricação</string>
    <string name="automatico">Direção assisitida</string>
    <string name="ano">Ano Modelo</string>
    <string name="blindado">Blindado</string>
    <string name="cadastro">Cadastro</string>
    <string name="carroceria">Carroceria</string>
    <string name="cor_do_carro">Cor do carro</string>
    <string name="cor">Cor</string>
    <string name="clean_form">Formulário Limpo</string>
    <string name="campo_invalido">Campo inválido</string>
    <string name="combustivel_invalido">Por favor, selecione uma opção de combustivel</string>
    <string name="carroceria_invalida">Carroceria inválida</string>
    <string name="dados_salvos">Dados salvo com sucesso!</string>
    <string name="duas_portas">2 Portas</string>
    <string name="eletrica">Elétrica</string>
    <string name="eletro_hidraulica">Eletro-hidráulica</string>
    <string name="hidraulica">Hidráulica</string>
    <string name="itens_opcionais">Itens Opcionais</string>
    <string name="limpar">Limpar</string>
    <string name="mecanica">Mecânica</string>
    <string name="nome_do_carro">Nome do carro</string>
    <string name="nome">Nome</string>
    <string name="opcoes">Opçoes</string>
    <string name="portas">Portas Passageiros</string>
    <string name="valor">Valor do carro</string>
    <string name="portas_invalida">Portas inválida</string>
    <string name="quatro_portas">4 Portas</string>
    <string name="salvar">Salvar</string>
    <string name="tipo">Tipo</string>
    <string name="preco">Preço</string>
    <string name="velocidade_max">Velocidade Max. (km/h)</string>
    <string name="aceleracao">Aceleração 0 a 100 (km/h)</string>
    <string name="motor">Motor</string>
    <string name="cambio">Câmbio</string>
    <string name="add_carro">Adicionar Carro</string>

    <string name="amarelo">Amarelo</string>
    <string name="azul">Azul</string>
    <string name="branco_perola">Branco Pérola</string>
    <string name="branco">Branco</string>
    <string name="cinza">Cinza</string>
    <string name="preto">Preto</string>
    <string name="preto_borealis">Preto Borealis</string>
    <string name="prata">Prata</string>
    <string name="dourada">Dourada</string>
    <string name="rosa">Rosa</string>
    <string name="vermelho">Vermelho</string>
    <string name="vermelho_rosso_corsa">Vermelho Rosso Corsa</string>
    <string name="verde">Verde</string>

    <string name="mercedes_benz_slc_300_branca_2018">MERCEDES-BENZ SLC 300</string>
    <string name="mercedes_benz_amg_gt63s_preta_2019">MERCEDES-BENZ AMG GT 63 S</string>
    <string name="bmw_m5_4_4_v8_cinza_2019">BMW M5 4.4 V8</string>
    <string name="ram_2500_laramie_cd_preta_2019">RAM 2500 LARAMIE CD 4X4</string>
    <string name="audi_r8_v10_performance_amarelo_2022">AUDI R8 V10 PERFORMANCE</string>
    <string name="cadillac_escalade_sport_2021_blindado_preto">CADILLAC ESCALADE ESV SPORT</string>
    <string name="dodge_charger_rt_verde_1970">DODGE CHARGER RT V8</string>
    <string name="ferrari_488_spider_2018_vermelha">FERRARI 488 SPIDER</string>
    <string name="jaguar_xj6_serie_iii_1983_verde">JAGUAR XJ6 SERIE III</string>
    <string name="range_rover_vogue_cinza_2021">LAND ROVER RANGE ROVER VOGUE 3.0 TDV6</string>
    <string name="mclaren_570s_spider_amarela_2019">MCLAREN 570 S SPIDER</string>
    <string name="meredes_benz_e300_exclusive_preta_2021">MERCEDES-BENZ E 300 EXCLUSIVE</string>
    <string name="mclaren_620r_preta_2020">MCLAREN 620R</string>
    <string name="pagani_utopia">Pagani Utopia</string>

    <string name="km">Km</string>
    <string name="imagem_carro">Imagem de Carro</string>
    <string name="sim">Sim</string>
    <string name="nao">Nao</string>
    <string name="image_carro">Imagem do carro</string>
    <string name="nome_do_autor">Uildson Santos dos Santos</string>
    <string name="descricao_app">Imagine ter uma conexão mágica e instantânea com o coração do seu carro, um vínculo que vai além da simples condução. O CarConnect é a chave para desbloquear todo o potencial do seu veículo, permitindo que você o gerencie e controle de maneiras que nunca pensou serem possíveis.</string>
    <string name="email_autor">dos.santos.uildson@gmail.com</string>
    <string name="curso_autor">Engenharia de Computação</string>
    <string name="logo_da_utfpr">Logo da UTFPR</string>
    <string name="sobre">Sobre</string>
    <string name="adicionar">Adicionar</string>
    <string name="nome_invalido">Nome obrigatório</string>
    <string name="velocidade_invalida">Erro: o valor informado não é um número válido.</string>
    <string name="porta_nao_selecionada">Por favor, selecione Qtd. de Portas</string>
    <string name="ano_invalido">Por favor, informe um ano válido</string>
    <string name="preco_invalido">Preço inválido</string>
    <string name="km_invalido">Kilometragem inválida</string>
    <string name="aceleracao_invalida">Aceleração inválido</string>
    <string name="permissao_negada">A permissão de acesso à galeria é necessária</string>
    <string name="permissao_negada_novamente">A permissão de acesso à galeria é necessária para continuar</string>
    <string name="selecione_imagem">Selecione uma imagem do carro</string>
</resources>