<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textViewCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/cadastro"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nome_do_carro"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textViewCadastro" />

        <EditText
            android:id="@+id/editTextAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ano_do_carro"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

        <EditText
            android:id="@+id/editTextValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/preco"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/editTextAno" />

        <EditText
            android:id="@+id/editTextCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/cor_do_carro"
            android:inputType="textPersonName|textCapWords"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/editTextValor" />

        <TextView
            android:id="@+id/textViewCarroceria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/carroceria"
            app:layout_constraintBottom_toTopOf="@+id/spinnerCarroceria"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <Spinner
            android:id="@+id/spinnerCarroceria"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/opcoes"
            android:minHeight="48dp"
            android:scrollbarSize="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/editTextCor" />

        <TextView
            android:id="@+id/textViewCombustivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/combustivel"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxAlcool"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />


        <CheckBox
            android:id="@+id/checkBoxAlcool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/alcool"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCarroceria" />

        <CheckBox
            android:id="@+id/checkBoxGasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/gasolina"
            app:layout_constraintStart_toEndOf="@+id/checkBoxAlcool"
            app:layout_constraintTop_toTopOf="@+id/checkBoxAlcool" />

        <CheckBox
            android:id="@+id/checkBoxDiesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/diesel"
            app:layout_constraintStart_toEndOf="@+id/checkBoxGasolina"
            app:layout_constraintTop_toTopOf="@+id/checkBoxGasolina" />

        <CheckBox
            android:id="@+id/checkBoxEletrico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/eletrico"
            app:layout_constraintStart_toEndOf="@+id/checkBoxDiesel"
            app:layout_constraintTop_toTopOf="@+id/checkBoxDiesel" />

        <TextView
            android:id="@+id/textViewPortas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/portas"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupPortas"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <RadioGroup
            android:id="@+id/radioGroupPortas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAlcool">

            <RadioButton
                android:id="@+id/radioButton2Portas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duas_portas" />

            <RadioButton
                android:id="@+id/radioButton4Portas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/quatro_portas" />

        </RadioGroup>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="226dp" />


        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="salvarDados"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonLimpar"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSalvar"
            app:layout_constraintHorizontal_bias="0.931"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAutomatico"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/nome"
            app:layout_constraintBottom_toTopOf="@+id/editTextNome"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textViewAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/ano"
            app:layout_constraintBottom_toTopOf="@+id/editTextAno"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textViewValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/valor"
            app:layout_constraintBottom_toTopOf="@+id/editTextValor"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <TextView
            android:id="@+id/textViewCor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/cor"
            app:layout_constraintBottom_toTopOf="@+id/editTextCor"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <CheckBox
            android:id="@+id/checkBoxBlindado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:drawableLeft="@drawable/ic_blindado_24"
            android:text="@string/blindado"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPortas"
            android:drawableStart="@drawable/ic_blindado_24" />

        <CheckBox
            android:id="@+id/checkBoxArCondicionado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/ic_ar_condicionado_24"
            android:text="@string/ar_condicionado"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxBlindado"
            android:drawableStart="@drawable/ic_ar_condicionado_24" />

        <CheckBox
            android:id="@+id/checkBoxAutomatico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/ic_automatico_24"
            android:text="@string/automatico"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxArCondicionado"
            android:drawableStart="@drawable/ic_automatico_24" />

        <TextView
            android:id="@+id/textViewItensOpcionais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/itens_opcionais"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxBlindado"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>