<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroCarroActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <TextView
            android:id="@+id/textViewCarroceriaItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/carroceria"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texInputLayoutDataCompra" />

        <Spinner
            android:id="@+id/spinnerCarroceria"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/opcoes"
            android:minHeight="48dp"
            android:scrollbarSize="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCarroceriaItem" />

        <CheckBox
            android:id="@+id/checkBoxEletrico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/eletrico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBoxDiesel"
            app:layout_constraintTop_toBottomOf="@+id/textViewCombustivel" />

        <CheckBox
            android:id="@+id/checkBoxDiesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/diesel"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxEletrico"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toEndOf="@+id/checkBoxGasolina"
            app:layout_constraintTop_toBottomOf="@+id/textViewCombustivel" />

        <CheckBox
            android:id="@+id/checkBoxGasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/gasolina"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxDiesel"
            app:layout_constraintStart_toEndOf="@+id/checkBoxAlcool"
            app:layout_constraintTop_toBottomOf="@+id/textViewCombustivel" />

        <CheckBox
            android:id="@+id/checkBoxAlcool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/alcool"
            app:layout_constraintEnd_toStartOf="@+id/checkBoxGasolina"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCombustivel" />

        <TextView
            android:id="@+id/textViewPortas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/portas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxAlcool" />

        <RadioGroup
            android:id="@+id/radioGroupPortas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPortas">

            <RadioButton
                android:id="@+id/radioButton2Portas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:text="@string/duas_portas" />

            <RadioButton
                android:id="@+id/radioButton4Portas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="4"
                android:text="@string/quatro_portas" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewItensOpcionais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/itens_opcionais"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPortas" />

        <CheckBox
            android:id="@+id/checkBoxArCondicionado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:drawableStart="@drawable/ic_ar_condicionado"
            android:drawableLeft="@drawable/ic_ar_condicionado"
            android:text="@string/ar_condicionado"
            app:layout_constraintBottom_toBottomOf="@+id/checkBoxBlindado"
            app:layout_constraintStart_toEndOf="@+id/checkBoxBlindado" />

        <CheckBox
            android:id="@+id/checkBoxBlindado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_blindado_24"
            android:drawableLeft="@drawable/ic_blindado_24"
            android:text="@string/blindado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewItensOpcionais" />

        <TextView
            android:id="@+id/textViewCombustivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/combustivel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCarroceria" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texInputLayoutNome"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutGaleria">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/texInputEditTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:hint="@string/nome_do_carro"
                android:inputType="textCapCharacters" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texInputLayoutPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texInputLayoutNome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preco"
                android:inputType="number|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/texInputLayoutDataCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texInputLayoutPreco">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextDataCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_compra"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayoutGaleria"
            android:layout_width="179dp"
            android:layout_height="71dp"
            android:layout_marginTop="60dp"
            android:clickable="true"
            android:gravity="center|start"
            android:onClick="onLinearLayoutClicked"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewCarro"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:src="@drawable/audi_r8_v10_performance_amarelo_2022"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:drawableLeft="@drawable/ic_baseline_add_to_photos_24"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="Galeria"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCadastro" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAdicionarCarroceria"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="62dp"
            android:layout_marginRight="62dp"
            android:onClick="addNewCarroceria"
            android:padding="12dp"
            app:icon="@drawable/ic_baseline_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/spinnerCarroceria"
            app:layout_constraintTop_toBottomOf="@+id/textViewCarroceriaItem" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
