<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/logo_da_utfpr"
    android:padding="20dp"
    tools:context=".AutoriaDoApp">

    <TextView
        android:id="@+id/textViewNomeAutor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="146dp"
        android:fontFamily="casual"
        android:text="@string/nome_do_autor"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSobreApp" />

    <TextView
        android:id="@+id/textViewEmailAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:text="@string/email_autor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCursoAutor"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewCursoAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/curso_autor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeAutor" />

    <TextView
        android:id="@+id/textViewSobreApp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="146dp"
        android:fontFamily="casual"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUTFPR"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:id="@+id/imageViewUTFPR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_da_utfpr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_utfpr" />

</androidx.constraintlayout.widget.ConstraintLayout>